--- a/jobs/watch-nodes-tl/templates/watcher.sh.erb
+++ b/jobs/watch-nodes-tl/templates/watcher.sh.erb
@@ -7,6 +7,8 @@ NODE_IP=$(ifconfig eth0 | grep "inet" | cut -d ':' -f 2 | cut -d ' ' -f 1)
 
 if [  -f "/var/vcap/store/watch-nodes-tl/REFRESH" ]; then
 
+echo "Refreshing node taints and labels"
+
   # Different clouds use different standards for node names, therefore the IP is the most
   # reliable way to map our current IP to the current node name
 
@@ -32,8 +34,8 @@ if [  -f "/var/vcap/store/watch-nodes-tl/REFRESH" ]; then
   rm -f /var/vcap/store/watch-nodes-tl/REFRESH
 fi
 
+echo "Watching for changes on ${NODE_IP}";
 while true; do
-    echo "Watching for changes on ${NODE_IP}";
     /var/vcap/packages/kubernetes/bin/kubectl --kubeconfig /var/vcap/jobs/kubelet/config/kubeconfig get node -o json | /var/vcap/packages/jq/bin/jq -e ".items[] | select (.status.addresses[] | select (.type == \"InternalIP\"  and .address == \"${NODE_IP}\")) | if (.spec.taints != null) then {"labels": .metadata.labels, "taints": .spec.taints } else {"labels": .metadata.labels } end" > /var/vcap/store/watch-nodes-tl/labels-taints.json
     sleep 15
 done
