--- a/jobs/watch-nodes-tl/templates/watcher.sh.erb
+++ b/jobs/watch-nodes-tl/templates/watcher.sh.erb
@@ -34,6 +34,6 @@ fi
 
 echo "Watching for changes on ${NODE_IP}";
 while true; do
-    /var/vcap/packages/kubernetes/bin/kubectl --kubeconfig /var/vcap/jobs/kubelet/config/kubeconfig get node -o json | /var/vcap/packages/jq/bin/jq -e ".items[] | select (.status.addresses[] | select (.type == \"InternalIP\"  and .address == \"${NODE_IP}\")) | if (.spec.taints != null) then {"labels": .metadata.labels, "taints": .spec.taints } else {"labels": .metadata.labels } end" > /var/vcap/store/watch-nodes-tl/labels-taints.json
+    /var/vcap/packages/kubernetes/bin/kubectl --kubeconfig /var/vcap/jobs/kubelet/config/kubeconfig get node -l bosh.id=<%= spec.id %> -o json | /var/vcap/packages/jq/bin/jq -e ".items[] | if (.spec.taints != null) then {"labels": .metadata.labels, "taints": .spec.taints } else {"labels": .metadata.labels } end" > /var/vcap/store/watch-nodes-tl/labels-taints.json
     sleep 15
 done
