--- a/jobs/jq/templates/bin/pre-start.erb
+++ b/jobs/jq/templates/bin/pre-start.erb
@@ -3,7 +3,7 @@
 set -e -x
 
 echo "Installing jq"
-pushd /var/vcap/packages/jq
+pushd /var/vcap/packages/jq/bin
   chmod +x ./jq
   cp ./jq /usr/local/bin
 popd
